--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,20 @@ on:
 jobs: 
   # This workflow contains a single job called "build"
   web-deploy:
-    name: Deploy
+    name: 🎉 Deploy
 
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Get latest code
+    - name: 🚚 Get latest code
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      uses: actions/checkout@v2.3.2
+      uses: actions/checkout@v3
 
-    - name: Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v2.0.0
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
