--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,9 @@ jobs:
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         exclude: |
-           **/.git*
-           **/.git*/**
-           **/.htacess
-           **/admin/.htacess
-           **/ceo/.htacess
-           **/driver/.htacess
-           **/p_manager/.htacess
-           **/s_manager/.htacess
+           exclude: |
+              **/.git*
+              **/.git*/**
+              **/node_modules/**
+              **/.**
            
